--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="col-lg-12">
                     <div class="left-content">
                         <a href="index.html" class="logo main-logo">
-                            <img src="assets/img/logo-white.png" alt="logo">
+                            <h3 class="text-white">آقای باتری</h3>
                         </a>
                     </div>
                     <div class="right-content">
@@ -89,7 +89,7 @@
         <div class="container nav-container">
             <div class="logo-wrapper navbar-brand ">
                 <a href="index.html" class="logo main-logo mobile-logo">
-                    <img src="assets/img/logo-white.png" alt="logo">
+                    <h3 class="text-white">آقای باتری</h3>
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="mirex">
@@ -108,46 +108,60 @@
                                 <div class="row">
                                     <div class="col-lg-3 col-sm-12">
                                         <div class="mega-menu-columns">
-                                            <h6 class="title">صفحات داخلی</h6>
+                                            <h6 class="title border-bottom pb-2">برند باتری</h6>
                                             <ul class="menga-menu-page-links">
-                                                <li><a href="category.html">دسته بندی</a></li>
-                                                <li><a href="cart.html">سبد خرید</a></li>
-                                                <li><a href="product-details.html">جزئیات محصول</a></li>
-                                                <li><a href="signup.html">ثبت نام</a></li>
-                                                <li><a href="sellers-products.html">پرفروش ترین ها</a></li>
-                                                <li><a href="seller-dashboard.html">صفحه داشبورد</a></li>
+                                                <li><a href="category.html"> برند 1</a></li>
+                                                <li><a href="category.html"> برند 2</a></li>
+                                                <li><a href="category.html"> برند 3</a></li>
+                                                <li><a href="category.html"> برند 4</a></li>
+                                                <li><a href="category.html"> برند 5</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-sm-12">
                                         <div class="mega-menu-columns">
-                                            <h6 class="title">دیگر صفحات</h6>
+                                            <h6 class="title border-bottom pb-2">مدل خودرو</h6>
                                             <ul class="menga-menu-page-links">
-                                                <li><a href="product_upload.html">آپلود محصول</a></li>
-                                                <li><a href="offers.html">تخفیفات</a></li>
-                                                <li><a href="invoice.html">صورتحساب</a></li>
-                                                <li><a href="vendor-list.html">لیست فروشندگان</a></li>
-                                                <li><a href="partners.html">همکاران</a></li>
-                                                <li><a href="404.html">404 صفحه</a></li>
+                                                <li><a href="category.html"> ایرانی</a></li>
+
+                                                <li><a href="category.html"> کره ای</a></li>
+
+                                                <li><a href="category.html"> چینی</a></li>
+
+                                                <li><a href="category.html"> اروپایی</a></li>
+
+                                                <li><a href="category.html"> ژاپنی</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-sm-12">
                                         <div class="mega-menu-columns">
-                                            <h6 class="title">دیگر صفحات</h6>
+                                            <h6 class="title border-bottom pb-2">ظرفیت باتری</h6>
                                             <ul class="menga-menu-page-links">
-                                                <li><a href="search.html">جستجو</a></li>
-                                                <li><a href="become-affiliats.html">مشارکت کنندگان</a></li>
-                                                <li><a href="faq.html">گفت و گو</a></li>
-                                                <li><a href="track-orders.html">پیگیری سفارش</a></li>
-                                                <li><a href="privacy_policy.html">سیاست حفظ حریم خصوصی</a></li>
-                                                <li><a href="contact.html">تماس</a></li>
+
+                                                <li><a href="category.html"> 100 آمپر به پایین</a></li>
+
+                                                <li><a href="category.html"> 150 آمپر</a></li>
+
+                                                <li><a href="category.html"> 200 آمپر</a></li>
+
+                                                <li><a href="category.html"> 230 آمپر</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-sm-12">
+                                        <div class="mega-menu-columns">
+                                            <h6 class="title border-bottom pb-2">باتری صنعتی</h6>
+                                            <ul class="menga-menu-page-links">
+                                                <li><a href="category.html"> باتری مخابراتی</a></li>
+                                                <li><a href="category.html"> کابینت باتری </a></li>
+                                                <li><a href="category.html"> باتری یو پی اس</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 d-none d-lg-block">
                                         <a href="product-details.html">
-                                            <img src="assets/img/mega-menu.jpg" alt="product image">
+                                            <img src="pic/bgmainpage33.jpg" alt="product image">
                                         </a>
                                     </div>
                                 </div>
@@ -177,7 +191,7 @@
             <div class="right-btn-wrapper">
                 <ul>
                     <li class="search" id="search"><i class="fas fa-search"></i> </li>
-                    <li class="right-menu" id="side-menu"><i class="fas fa-user"></i> </li>
+                    <li class="right-menu"> <a class="fas fa-user usericon" href="login.html"></a> </li>
                     <li class="cart" id="cart"><i class="fas fa-shopping-basket"></i>
                         <span class="badge">12</span>
                     </li>
@@ -197,7 +211,7 @@
                     <div class="header-inner myinner">
                         <!-- header inner -->
                         <span class="subtitle ">خدمات شبانه روزی</span>
-                        <h4 class="title "> آقای باتری، نصب و فروش باتری ماشین</h4>
+                        <h4 class="title "> آقای باتری فروش باتری ماشین</h4>
                         <p class="wow fadeInDown">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده
                         </p>
                         <div class="btn-wrapper wow fadeInDown">
@@ -224,7 +238,7 @@
         <div class="top-content">
             <!-- top content -->
             <a href="#" class="logo">
-                <img src="assets/img/logo-white.png" alt="logo">
+                <h3 class="text-white">آقای باتری</h3>
             </a>
             <span class="side-sidebar-close-btn"><i class="fas fa-times"></i></span>
         </div><!-- //. top content -->
@@ -327,9 +341,11 @@
                     <div class="single-process-item-one">
                         <!-- single process item one -->
                         <img src="pic/logo/free-shipping (1).png" width="30%" height="30%" alt="rayegan" />
-                        <h4 class="tiel mt-2">ارسال و نصب رایگان باطری ماشین</h4>
-                        <span class="details">باطری مناسب خودرو در سریع ترین زمان ممکن حمل و پس از تست سیستم برقی نصب
-                            خواهد شد.</span>
+                        <h4 class="tiel mt-2">ارسال رایگان باتری ماشین</h4>
+                        <span class="details">
+                            باطری مناسب خودرو در سریع ترین زمان ممکن حمل و تحئیل داده
+                            خواهد شد.
+                        </span>
                     </div><!-- //.single process item one -->
                 </div>
             </div>
@@ -795,7 +811,7 @@
     <!-- speakers area end -->
 
     <!-- best seller area four start -->
-    <div class="best-seller-area-four">
+    <div class="best-seller-area-four pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -1363,9 +1379,17 @@
     </div>
     <!-- best seller area four end -->
 
-    <h2 class="text-center mb-5">محصولات دسته دوم</h2>
+    <div style="transform: scaleY(-1);" class="text-center mt-0 mb-0">
+        <img width="270px" height="80px" src="pic/vectors/Linevector2.png" alt="Linevector">
+    </div>
 
-    <div class="owl-carousel owl-theme">
+    <h2 class="text-center mb-0">محصولات دسته دوم</h2>
+
+    <div class="text-center mt-0 mb-4">
+        <img width="270px" height="80px" src="pic/vectors/Linevector2.png" alt="Linevector">
+    </div>
+
+    <div class="owl-carousel owl-theme mb-2">
 
 
         <div class="single-product-item-two">
@@ -1494,7 +1518,7 @@
                         <div class="footer-widget about">
                             <div class="widget-body">
                                 <a href="index-3.html" class="footer-logo">
-                                    <img src="assets/img/logo-white.png" alt="footer logo">
+                                    <h3 class="text-white">آقای باتری</h3>
                                 </a>
                                 <ul class="contact-info-list">
                                     <li>
@@ -1503,8 +1527,9 @@
                                                 <i class="fas fa-map-marker-alt"></i>
                                             </div>
                                             <div class="content">
-                                                <span class="details">ایران، ارومیه، ساختمان حافظ، فروشگاه بیگ
-                                                    انیا</span>
+                                                <span class="details">
+                                                    ایران ، تهران
+                                                </span>
                                             </div>
                                         </div>
                                     </li>
@@ -1514,8 +1539,8 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="content">
-                                                <span class="details">youremail@yourdomain.com</span>
-                                                <span class="details">example@yourdomain.com</span>
+                                                <span class="details">mrbattry@gmail.com</span>
+
                                             </div>
                                         </div>
                                     </li>
@@ -1525,8 +1550,8 @@
                                                 <i class="fas fa-phone"></i>
                                             </div>
                                             <div class="content">
-                                                <span class="details">+88 (0) 101 0000 000</span>
-                                                <span class="details">+99 (989) 101 0000 000</span>
+                                                <span class="details">021 66 64 666</span>
+
                                             </div>
                                         </div>
                                     </li>
@@ -1588,48 +1613,12 @@
                 </div>
             </div>
         </div><!-- //.footer top one -->
-        <div class="copyright-area blue-bg">
+        <div class="copyright-area blue-bg pb-3">
             <!-- copyright area -->
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="copyright-inner">
-                            <!-- copyright inner -->
-                            <div class="left-content-area">
-                                <span class="copyright-text">کپی رایت@TN_Plugin - 2018 _ فارسی و راست چین فارسی توسط
-                                    طاهر نصیری</span>
-                            </div>
-                            <div class="right-content-area">
-                                <ul class="payment-logo">
-                                    <li>
-                                        <img src="assets/img/payment-logo/01.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/02.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/03.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/04.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/05.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/06.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/07.png" alt="payment logo">
-                                    </li>
-                                    <li>
-                                        <img src="assets/img/payment-logo/08.png" alt="payment logo">
-                                    </li>
-                                </ul>
-                            </div>
-                        </div><!-- //. copyright inner -->
-                    </div>
-                </div>
+                <h5 class="text-white text-center">
+                    طراحی شده توسط <a style="color: #FF8641;" href="https://www.spad.co">اسپاد</a> تمامی حقوق محفوظ است
+                </h5>
             </div>
         </div><!-- //. copyright area -->
     </footer>
